--- a/trunk/index.html
+++ b/trunk/index.html
@@ -1,11 +1,12 @@
 <html>
 	<head>
-		<title>"jQuery checkbox v.1.0.0" demo</title>
+		<title>"jQuery checkbox v.1.1.0 Beta 2" demo</title>
 		<link rel="stylesheet" href="jquery.checkbox.css" />
 		<link rel="stylesheet" href="jquery.safari-checkbox.css" />
-		<script type="text/javascript" src="jquery.pack.js"></script>
+		<script type="text/javascript" src="jquery.js"></script>
 		<script type="text/javascript" src="jquery.checkbox.js"></script>
 		<script type="text/javascript" src="jquery.checkboxes.pack.js"></script>
+		<script type="text/javascript" src="jquery.shiftclick.js"></script>
 		<script type="text/javascript">
 			$(document).ready(function() {
 				$('input:checkbox:not([safari])').checkbox();
@@ -17,6 +18,7 @@
 						return false;
 					})
 				});
+				$('#myform :checkbox').shiftClick().length;
 			});
 
 			displayForm = function (elementId)
@@ -50,29 +52,29 @@
 			
 		</script>
 		<style type="text/css">
-body, html { padding: 0px; margin: 0px; background: #ccc; font-family: Arial;font-size: 14px;}
+body, html { padding: 0px; margin: 0px; background: #ccc; font-family: Arial;font-size: 13px;}
 h1 {margin: 20px 0 0 0;padding: 0;color: #09f;font-size: 28px; text-align: center;font-weight: bold;}
 h3 {margin: 25px 0 0 0;padding: 0;font-size: 20px;}
-p {clear: both;vertical-align: middle;font-size: 14px;margin: 10px 0 0 0;padding: 0;}
+p {clear: both;vertical-align: middle;font-size: 13px;margin: 10px 0 0 0;padding: 0;}
 pre { display: block;margin: 0px;padding: 2px 2px 2px 2px; border: 1px solid #888; background: #ccc;}
 code { display: block;margin: 0px;padding: 2px 2px 2px 20px;border: 1px solid #888;background: #fff;}
 .hr { clear: both;margin: 20px 0 20px 0;font-size: 2px;line-height: 2px;background: #ccc;border: 1px solid #888;height: 2px;display: block;}
-table {font-size: 14px;}
+table {font-size: 13px;}
 a {color: #069;}
 a:hover{color: #e30;}
 a.code{display: block;float:left;clear:both;padding: 2px 0px;}
-
+label { cursor: hand; cursor: pointer;}
 		</style>
 	</head>
 	
 	<body>
 		<table width="760" cellpadding="0" cellspacing="0" align="center" style="background: #fff; height: 100%;" height="100%"><tr><td style="padding: 20px;" valign="top">
-		<h1>"jQuery checkbox v.1.0.0" demo</h1>
+		<h1>"jQuery checkbox v.1.1.0 Beta 2" demo</h1>
 		
 		<div id="form1">
 		<h3>Default skin</h3>
-		<p><label><input name="checkbox.1.1" type="checkbox" onclick="var j = jQuery('#check').attr('disabled', jQuery('#check').attr('disabled') ? false : true)"> Unchecked checkbox (by clicking on this checkbox you can disable/enable the checkbox below)</label></p>
-		<p><input name="checkbox.1.2" type="checkbox" id="check" checked> <label for="check">Checked  checkbox (this one)</label></p>
+		<p><label>&lt;label&gt; <input name="checkbox.1.1" type="checkbox" onclick="var j = jQuery('#check').attr('disabled', jQuery('#check').attr('disabled') ? false : true)"> Unchecked checkbox (by clicking on this checkbox you can disable/enable the checkbox below)&lt;/label&gt;</label></p>
+		<p><input name="checkbox.1.2" type="checkbox" id="check" checked> <label for="check">&lt;label&gt; Checked  checkbox (this one)&lt;/label&gt;</label></p>
 	
 		<p><input name="checkbox.1.3" type="checkbox" disabled> Disabled & unchecked checkbox</p>
 		<p><input name="checkbox.1.4" type="checkbox" disabled checked> Disabled & checked checkbox</p>
@@ -103,6 +105,10 @@ a.code{display: block;float:left;clear:both;padding: 2px 0px;}
 });	</code></pre>
 
 		<div class="hr"></div>
+
+		<h3>Advanced demo (changing skin on the fly, using together with 
+		  "<a href="http://plugins.jquery.com/project/checkboxes" target="_blank">Checkbox manipulation</a>" and 
+		  "<a href="http://plugins.jquery.com/project/shiftclick" target="_blank">shiftClick</a>")</h3>
 		<p>
 			<a href="javascript: changeStyle();">Switch to "Default" skin</a> &nbsp; <a href="javascript: changeStyle('jquery-safari-checkbox');">Switch to "Safari" skin</a>
 		</p>
@@ -110,21 +116,18 @@ a.code{display: block;float:left;clear:both;padding: 2px 0px;}
 		<form id="myform" action="javascript:void(0)">
 			<table cellspacing="5">
 				<tr><th>&nbsp;</th><th>Last Name</th><th>First Name</th><th>Title</th></tr>
-				<tr><td><input type="checkbox" id="checkbox1" class="top5" /></td><td>Davolio</td><td>Nancy</td><td>Sales Representative</td></tr>
-				<tr><td><input type="checkbox" id="checkbox2" class="top5" /></td><td>Fuller</td><td>Andrew</td><td>Vice President, Sales</td></tr>
-				<tr><td><input type="checkbox" id="checkbox3" class="top5" /></td><td>Leverling</td><td>Janet</td><td>Sales Representative</td></tr>
-				<tr><td><input type="checkbox" id="checkbox4" class="top5" /></td><td>Peacock</td><td>Margaret</td><td>Sales Representative</td></tr>
-				<tr><td><input type="checkbox" id="checkbox5" class="top5" name="bottom5" /></td><td>Buchanan</td><td>Steven</td><td>Sales Manager</td></tr>
-				<tr><td><input type="checkbox" id="checkbox6" name="bottom5" /></td><td>Suyama</td><td>Michael</td><td>Sales Representative</td></tr>
-				<tr><td><input type="checkbox" id="checkbox7" name="bottom5" /></td><td>King</td><td>Robert</td><td>Sales Representative</td></tr>
-				<tr><td><input type="checkbox" id="checkbox8" name="bottom5" /></td><td>Callahan</td><td>Laura</td><td>Inside Sales Coordinator</td></tr>
-				<tr><td><input type="checkbox" id="checkbox9" name="bottom5" /></td><td>Dodsworth</td><td>Anne</td><td>Sales Representative</td></tr>
+				<tr><td><input type="checkbox" name="checkbox[]" class="top5" /></td><td>Davolio</td><td>Nancy</td><td>Sales Representative</td></tr>
+				<tr><td><input type="checkbox" name="checkbox[]" class="top5" /></td><td>Fuller</td><td>Andrew</td><td>Vice President, Sales</td></tr>
+				<tr><td><input type="checkbox" name="checkbox[]" class="top5" /></td><td>Leverling</td><td>Janet</td><td>Sales Representative</td></tr>
+				<tr><td><input type="checkbox" name="checkbox[]" class="top5" /></td><td>Peacock</td><td>Margaret</td><td>Sales Representative</td></tr>
+				<tr><td><input type="checkbox" name="checkbox[]" class="top5 bottom5" /></td><td>Buchanan</td><td>Steven</td><td>Sales Manager</td></tr>
+				<tr><td><input type="checkbox" name="checkbox[]" class="bottom5" /></td><td>Suyama</td><td>Michael</td><td>Sales Representative</td></tr>
+				<tr><td><input type="checkbox" name="checkbox[]" class="bottom5" /></td><td>King</td><td>Robert</td><td>Sales Representative</td></tr>
+				<tr><td><input type="checkbox" name="checkbox[]" class="bottom5" /></td><td>Callahan</td><td>Laura</td><td>Inside Sales Coordinator</td></tr>
+				<tr><td><input type="checkbox" name="checkbox[]" class="bottom5" /></td><td>Dodsworth</td><td>Anne</td><td>Sales Representative</td></tr>
 			</table>
 		</form>
 
-		<div class="hr"></div>
-		
-		<h3>Using together with <a href="http://plugins.jquery.com/project/checkboxes">"Checkbox Manipulation" plugin</a></h3>
 		<p>
 			<a href="#" class="code">$("#myform").toggleCheckboxes()</a>
 			<a href="#" class="code">$("#myform").toggleCheckboxes(":not(#checkbox1)")</a>
